-carelog-List Page(돌봄 케어 로그 목록)

--- a/src/main/resources/templates/carelog/carelog-list.html
+++ b/src/main/resources/templates/carelog/carelog-list.html
@@ -85,7 +85,7 @@
             <th>고객</th>
             <th>케어 유형</th>
             <th>설명</th>
-            <th>작성일</th>
+            <th>🕒 작성일</th>
         </tr>
         </thead>
         <tbody>
