- care-available-date List page(돌봄사 -> 돌봄 가능 날짜)

--- a/src/main/resources/templates/careavailabledate/care-available-date-list.html
+++ b/src/main/resources/templates/careavailabledate/care-available-date-list.html
@@ -13,7 +13,7 @@
 <!-- data-member-id 설정 -->
 <div id="memberData" th:data-member-id="${session.member?.id}"></div>
 <!-- Navigation Bar (공통) -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
         <a class="navbar-brand" href="/pets-care/main">🐶 반려견 돌봄</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
