--- a/src/main/resources/templates/careavailabledate/edit-care-available-date.html
+++ b/src/main/resources/templates/careavailabledate/edit-care-available-date.html
@@ -12,7 +12,7 @@
 <div id="memberData" th:data-member-id="${session.member?.id}"></div>
 <!-- Navigation Bar (공통) -->
 <div id="error-message" class="error-message" style="display:none; color:red;"></div>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
         <a class="navbar-brand" href="/pets-care/main">🐶 반려견 돌봄</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
