--- a/src/main/resources/templates/reservable/reservable-list.html
+++ b/src/main/resources/templates/reservable/reservable-list.html
@@ -12,7 +12,7 @@
 <!-- data-member-id 설정 -->
 <div id="memberData" th:data-member-id="${session.member?.id}"></div>
 <!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
         <a class="navbar-brand" href="/pets-care/main">🐶 반려견 돌봄</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
