-schedule-detail Page(돌봄사 -> 돌봄 예약 상세 정보)

--- a/src/main/resources/templates/schedule/schedule-detail.html
+++ b/src/main/resources/templates/schedule/schedule-detail.html
@@ -12,7 +12,7 @@
 <div id="memberData" th:data-member-id="${session.member?.id}"></div>
 <div id="scheduleDetail" th:data-sitter-schedule-id="${schedule.id}"></div>
 <!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
         <a class="navbar-brand" href="/pets-care/main">🐶 반려견 돌봄</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
