--- a/src/main/resources/static/css/mainStyle.css
+++ b/src/main/resources/static/css/mainStyle.css
@@ -16,10 +16,11 @@ body {
 
 /* Navigation Bar Styling */
 .navbar {
-    background-color: #ffffff; /* White background */
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow */
-    font-size: 1rem; /* Slightly larger font */
+    background-color: rgba(255, 255, 255, 0.1) !important;/* 반투명 흰색 */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1) !important; /* 그림자는 유지 */
+    font-size: 1rem;
     padding: 15px 20px;
+    backdrop-filter: blur(10px) !important; /* 배경 흐림 효과 */
 }
 
 .navbar-brand {
