--- a/src/main/resources/static/css/reservable-detail.css
+++ b/src/main/resources/static/css/reservable-detail.css
@@ -10,6 +10,7 @@ body {
     background: white;
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    z-index: 1; /* 네비게이션보다 낮은 값 */
 }
 
 /* 전체 스타일 */
