--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -35,7 +35,11 @@
                         안녕하세요, <b th:text="${session.member.name}"></b>님!
                     </a>
                     <div class="dropdown-menu" aria-labelledby="userDropdown">
-                        <a class="dropdown-item" th:href="@{/pets-care/members/{memberId}/myPage(memberId=${session.member.id})}">마이페이지</a>
+                        <a class="dropdown-item"
+                           th:href="@{/pets-care/members/{memberId}/myPage(memberId=${session.member.id})}"
+                           th:if="${session.member.role.name() != 'ADMIN'}">
+                            마이페이지
+                        </a>
 
                         <!-- PET_SITTER인 경우 -->
                         <div th:if="${session.member.role.name() == 'PET_SITTER'}">
@@ -58,9 +62,11 @@
                         <div th:if="${session.member.role.name() == 'ADMIN'}">
                             <div class="dropdown-divider"></div>
                             <h6 class="dropdown-header">관리자 메뉴</h6>
-                            <a class="dropdown-item" th:href="@{/admin/members}">회원 관리</a>
-                            <a class="dropdown-item" th:href="@{/admin/reservations}">예약 관리</a>
-                            <a class="dropdown-item" th:href="@{/admin/schedules}">돌봄 가능 날짜 관리</a>
+                            <a class="dropdown-item" th:href="@{/pets-care/admin/members}">회원 관리</a>
+                            <a class="dropdown-item" th:href="@{/pets-care/admin/schedules}">돌봄 가능 날짜 관리</a>
+                            <a class="dropdown-item" th:href="@{/pets-care/admin/reservations}">예약 관리</a>
+                            <a class="dropdown-item" th:href="@{/pets-care/admin/reviews}">리뷰 관리</a>
+                            <a class="dropdown-item" th:href="@{/pets-care/admin/care-logs}">돌봄 케어 로그 관리</a>
                         </div>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item text-danger" th:href="@{/pets-care/logout}">로그아웃</a>
@@ -90,7 +96,7 @@
                 <div class="card-body">
                     <h5 class="card-title">펫시터의 집에서 돌봄을!</h5>
                     <p class="card-text">우리집 방문 프라이버시의 걱정없이 펫시터의 집에서 돌봄을 안심하고 맡겨보세요!</p>
-                    <a th:href="@{/petsitter}" class="btn btn-primary">자세히 보기</a>
+                    <a th:href="@{/pets-care/sitter}" class="btn btn-primary">자세히 보기</a>
                 </div>
             </div>
         </div>
@@ -99,7 +105,7 @@
                 <div class="card-body">
                     <h5 class="card-title">훈련사의 체계적 교육!</h5>
                     <p class="card-text">훈련을 예약하고 우리 아이 성향 맞춤 솔루션을 받아보세요!</p>
-                    <a th:href="@{/trainer}" class="btn btn-primary">자세히 보기</a>
+                    <a th:href="@{/pets-care/trainer}" class="btn btn-primary">자세히 보기</a>
                 </div>
             </div>
         </div>
@@ -108,7 +114,7 @@
                 <div class="card-body">
                     <h5 class="card-title">어떤 분들이 활동하고 있나요?</h5>
                     <p class="card-text">반려동물을 사랑하는 마음은 물론, 반려동물 관련 자격증 또는 전문 지식을 갖춘 분들이 전문 펫시터로 활동하고 있습니다!</p>
-                    <a th:href="@{/pets-care/sitters}" class="btn btn-primary">자세히 보기</a>
+                    <a th:href="@{/pets-care/sitters-information}" class="btn btn-primary">자세히 보기</a>
                 </div>
             </div>
         </div>
