--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -63,10 +63,8 @@
                             <div class="dropdown-divider"></div>
                             <h6 class="dropdown-header">관리자 메뉴</h6>
                             <a class="dropdown-item" th:href="@{/pets-care/admin/members}">회원 관리</a>
-                            <a class="dropdown-item" th:href="@{/pets-care/admin/schedules}">돌봄 가능 날짜 관리</a>
                             <a class="dropdown-item" th:href="@{/pets-care/admin/reservations}">예약 관리</a>
-                            <a class="dropdown-item" th:href="@{/pets-care/admin/reviews}">리뷰 관리</a>
-                            <a class="dropdown-item" th:href="@{/pets-care/admin/care-logs}">돌봄 케어 로그 관리</a>
+                            <a class="dropdown-item" th:href="@{/pets-care/admin/amounts}">포인트 내역 관리</a>
                         </div>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item text-danger" th:href="@{/pets-care/logout}">로그아웃</a>
@@ -122,7 +120,7 @@
 
     <!-- Latest Reviews Section -->
     <section class="latest-reviews text-center mt-5">
-        <h2>실시간 돌봄 후기</h2>
+        <h2>💬 실시간 돌봄 후기</h2>
         <div class="row">
             <div class="col-md-4" th:each="review : ${reviews}">
                 <div class="card mb-4">
