-reservation-detail Page(관리자 페이지 - 돌봄 예약 정보 상세 조회)

--- a/src/main/resources/templates/admin/reservation/reservation-detail.html
+++ b/src/main/resources/templates/admin/reservation/reservation-detail.html
@@ -128,7 +128,7 @@
         </li>
     </ul>
 
-    <h4 class="mt-5">📑 이용 후기</h4>
+    <h4 class="mt-5">💭 이용 후기</h4>
     <div class="card p-3" th:if="${reservation.review}">
         <div th:if="${reservation.review ne null and not #strings.isEmpty(reservation.review.customerNickName)}">
             <div class="review">
