--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -58,15 +58,33 @@
                         <button type="submit" class="btn btn-primary btn-block">로그인</button>
                     </form>-->
 
-                    <form onsubmit="event.preventDefault(); login();">
+                    <!--<form onsubmit="event.preventDefault(); login();">
+                        <input name="_csrf" type="hidden" value="${_csrf.token}">
                         <div class="form-group">
                             <label for="loginId">아이디</label>
-                            <input type="text" class="form-control" id="loginId" placeholder="아이디를 입력하세요.">
+                            <input type="text" class="form-control" id="loginId" name="loginId" placeholder="아이디를 입력하세요.">
                         </div>
                         <div class="form-group">
                             <label for="password">비밀번호</label>
-                            <input type="password" class="form-control" id="password" placeholder="비밀번호를 입력하세요.">
+                            <input type="password" class="form-control" id="password" name="password" placeholder="비밀번호를 입력하세요.">
                         </div>
+                        <button type="submit" class="btn btn-primary btn-block">로그인</button>
+                    </form>-->
+
+                    <form action="/login" method="POST">
+                        <!-- CSRF 토큰 -->
+                        <input name="_csrf" type="hidden" value="${_csrf.token}">
+
+                        <div class="form-group">
+                            <label for="loginId">아이디</label>
+                            <input type="text" class="form-control" id="loginId" name="username" placeholder="아이디를 입력하세요.">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="password">비밀번호</label>
+                            <input type="password" class="form-control" id="password" name="password" placeholder="비밀번호를 입력하세요.">
+                        </div>
+
                         <button type="submit" class="btn btn-primary btn-block">로그인</button>
                     </form>
                 </div>
