--- a/src/main/resources/templates/reservation/reservation-detail.html
+++ b/src/main/resources/templates/reservation/reservation-detail.html
@@ -100,6 +100,8 @@
                 <strong th:text="${pet.name}"></strong>
                 (나이: <span th:text="${pet.age}"></span>세,
                 품종: <span th:text="${pet.breed}"></span>)
+                <br>
+                <strong>건강 상태 및 특이사항:</strong> <span th:text="${pet.medicalConditions} ?: '없음'"></span>
             </li>
         </ul>
     </div><br>
