--- a/src/main/resources/templates/admin/reservation/reservation-detail.html
+++ b/src/main/resources/templates/admin/reservation/reservation-detail.html
@@ -108,7 +108,8 @@
         <li class="list-group-item">
             <strong th:text="${pet.name}"></strong>
             (나이: <span th:text="${pet.age}"></span>세,
-            품종: <span th:text="${pet.breed}"></span>)
+            품종: <span th:text="${pet.breed}"></span>)<br>
+            <strong>건강 상태 및 특이사항:</strong> <span th:text="${pet.medicalConditions} ?: '없음'"></span>
         </li>
     </ul>
 
